--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
       .hidden {
         display: none;
       }
-      /* Styles regarding the image elements*/
+      /* Styles regarding the image elements end*/
 
       /* Styles of the functional elements*/
       /* go-buttons are used to move the robot car in different directions */
@@ -268,7 +268,7 @@
         // predict after 50 ms the request is sent, 50 ms is a fine tuned parameter
         // to ensure good performance
       }
-      // this function is added later to be able to set the value
+      // this function is added later to be able to set the speeds and servo position values
       function toggleSetValue(x, y) {
         var xhr = new XMLHttpRequest();
         xhr.open(
@@ -279,20 +279,12 @@
         xhr.send();
       }
 
-      function changeInput(strESP32EndPoint, strFlaskEndPoint, strIptID) {
-        const inputField = document.getElementById(strIptID);
-        inputField.addEventListener("change", function () {
-          let inputValue = inputField.value;
-          console.log(inputValue);
-          toggleSetValue(strESP32EndPoint, inputValue);
-          updateInput(strFlaskEndPoint, strIptID);
-        });
-      }
-      changeInput("setLeftSpeed", "getLeftSpeed", "iptLeftSpeed");
-      changeInput("setRightSpeed", "getRightSpeed", "iptRightSpeed");
-      changeInput("setServoPos", "getServoPos", "iptServoPos");
-      // let speedStep = 10,
-      //   servoStep = 10;
+      /*
+      An abstract function to add an event listener to send requests to the python flask server, 
+      which, in turn, sends a request to the ESP32 CAM server to increase/decrease the
+      values of speeds and servo position and update the values in the input fields
+      these detour routes were selected to avoid CORS errors, although they are not yet optimal 
+      */
       function requestESP32nFlask(
         strBtnID,
         strESP32EndPoint,
@@ -318,7 +310,7 @@
             xhr.send();
           });
       }
-
+      // Im plementations of the abstract functions requestESP32nFlask
       requestESP32nFlask(
         "btnLeftSpeedDecrease",
         "leftSpeedDecrease",
@@ -361,13 +353,10 @@
         "iptServoPos",
         true
       );
+      // Im plementations of the abstract functions requestESP32nFlask end
 
-      function updateInput(
-        //strBtnID,
-        //strESP32EndPoint,
-        strFlaskEndPoint,
-        strIptID
-      ) {
+      // Functions to change and update the values of speeds and servo position
+      function updateInput(strFlaskEndPoint, strIptID) {
         var xhr = new XMLHttpRequest();
         xhr.open("POST", "/" + strFlaskEndPoint, true);
         xhr.setRequestHeader(
@@ -381,7 +370,24 @@
         };
         xhr.send();
       }
-      // Draw bounding boxes around detected objects on the image element upon receiving a response from yolo8
+      function changeInput(strESP32EndPoint, strFlaskEndPoint, strIptID) {
+        const inputField = document.getElementById(strIptID);
+        inputField.addEventListener("change", function () {
+          let inputValue = inputField.value;
+          console.log(inputValue);
+          toggleSetValue(strESP32EndPoint, inputValue);
+          updateInput(strFlaskEndPoint, strIptID);
+        });
+      }
+      changeInput("setLeftSpeed", "getLeftSpeed", "iptLeftSpeed");
+      changeInput("setRightSpeed", "getRightSpeed", "iptRightSpeed");
+      changeInput("setServoPos", "getServoPos", "iptServoPos");
+      // Functions to change and update the values of speeds and servo position end
+
+      // Main functions to control the robot car in Run Auto Mode
+
+      // list of messages to command the robot car movements
+      // upon receiving predictions from YOLOv8
       const alertMessage = [
         "Stop",
         "Decelerate",
@@ -395,6 +401,7 @@
         "Backward",
       ];
 
+      // Names of the objects trained in YOLOv8
       const clsNames = [
         "empty",
         "vase",
@@ -409,7 +416,7 @@
         "boxes",
         "tableFoot",
       ];
-      // colors of the bounding boxes around the class
+      // colors of the bounding boxes around the classes
       const bbColors = [
         "white",
         "black",
@@ -424,62 +431,50 @@
         "LightSkyBlue",
         "purple",
       ];
-      let conStopNum = 0;
-      let closingLimit = 55;
-      let stopLimit = 90;
-      let clearSideLimit = 10;
-      let ableToMoveWidth = 60;
+      let conStopNum = 0; // a variable to store the number of consecative "Stop" alert messages
+      let closingLimit = 55; // a fine-tuned parameter to notice the robot car that the car is closed
+      //to some objects, the car should decelerate. (100 - closingLitmit = 45 %) is the height of
+      // the predicted empty space bounding box in front-of the car
+      let stopLimit = 90; // a fine-tuned parameter to notice the robot car that the car is too closed
+      //to some objects, the car should stop. (100 - stopLitmit = 10 %) is the height of
+      // the predicted empty space bounding box in front-of the car
+      let clearSideLimit = 10; // a fine-tuned parameter to notice the robot car that there are
+      //some objects at the side of the car, the car should veer/reverse left/right (100 - clearSideLitmit = 90 %)
+      // is the width of the predicted empty space bounding box in front-of the car
+      let ableToMoveWidth = 60; // a fine-tuned parameter to notice the robot car if it can move forward
+      //if the width of the predicted empty space bounding box in front-of the car > ableToMoveWitdth = 60 %)
+      //it can go forward
       const clsNumber = clsNames.length; // get the class numbers
+
+      // main functions to process the bounding boxes upon receiving predicted bounding boxes'
+      // normalized (in %) coordinates [x of the box center, y of the box center, width, height]
+
       function processBB(bboxes) {
-        // for (let i = 0; i < clsNumber; i++) {
-        //   console.log(clsNames[i] + "BB");
-        //   document.getElementById(clsNames[i] + "BB").classList.add("hidden");
-        // }
+        // remove all the bounding boxes in the previous frames
         const oldBBoxes = document.getElementsByClassName("bounding-box");
         while (oldBBoxes.length > 0) {
           oldBBoxes[0].parentNode.removeChild(oldBBoxes[0]);
         }
-        //var htmlBoundingBox = document.getElementById("vaseBB");
-        var bbColor = "DarkRed";
-        let returnMessage = alertMessage[0];
+        var bbColor = "DarkRed"; // assign a dummy bounding box border colors
+        let returnMessage = alertMessage[0]; // a default "Stop" returned alert message
+
+        // parameters related to positions of objects that are not an empty space
+        // not used for the current algorithm but might be useful for future algorithms
         let leftMostPos = 100;
         let rightMostPos = 0;
         let bottomMostPos = 0;
         let maxWidth = 0;
-
         let maxEmptyBBox = [0, 0, 0, 0];
 
         if (bboxes[0].length > 0) {
           for (let i = 0; i < bboxes[0].length; i++) {
-            //------------------Drawing the bounding box --------------------------
-            // if (bboxes[0][i] == 0) {
-            //   htmlBoundingBox = document.getElementById("vaseBB");
-            //   bbColor = "red";
-            //   htmlBoundingBox.classList.remove("hidden");
-            // } else if (bboxes[0][i] == 1) {
-            //   htmlBoundingBox = document.getElementById("bookBB");
-            //   bbColor = "green";
-            //   htmlBoundingBox.classList.remove("hidden");
-            // } else if (bboxes[0][i] == 2) {
-            //   htmlBoundingBox = document.getElementById("shoesBB");
-            //   htmlBoundingBox.classList.remove("hidden");
-            //   bbColor = "blue";
-            // }
-            // for (let j = 0; j < clsNumber; j ++){
-            //   if (bboxes[0][i] == j) {
-
-            //     break;
-            // }
+            // drawing bounding boxes around the detected objects
             const htmlBoundingBox = document.createElement("div");
             htmlBoundingBox.className = "bounding-box";
             document
               .getElementById("image-container")
               .appendChild(htmlBoundingBox);
-            // htmlBoundingBox = document.getElementById(
-            //   clsNames[bboxes[0][i]] + "BB"
-            // );
             bbColor = bbColors[bboxes[0][i]];
-            //htmlBoundingBox.classList.remove("hidden");
             htmlBoundingBox.style.left = `${
               bboxes[2][i][0] - bboxes[2][i][2] / 2
             }%`;
@@ -489,8 +484,10 @@
             htmlBoundingBox.style.width = `${bboxes[2][i][2]}%`;
             htmlBoundingBox.style.height = `${bboxes[2][i][3]}%`;
             htmlBoundingBox.style.borderColor = bbColor;
+            // drawing bounding boxes around the detected objects
 
-            //------------------Returning Info for control--------------------------
+            // codes related to positions of objects that are not an empty space
+            // not used for the current algorithm but might be usefull for future algorithms
             if (bboxes[0][i] != 0) {
               maxWidth =
                 maxWidth < bboxes[2][i][2] ? bboxes[2][i][2] : maxWidth;
@@ -506,7 +503,11 @@
                 rightMostPos < bboxes[2][i][0] + bboxes[2][i][2] / 2
                   ? bboxes[2][i][0] + bboxes[2][i][2] / 2
                   : rightMostPos;
+              // codes related to positions of objects that are not an empty space
+              // not used for the current algorithm but might be usefull for future algorithms
+              // end
             } else {
+              // get the empty space bbox with maximum area
               maxEmptyBBox =
                 bboxes[2][i][2] * bboxes[2][i][3] >
                 maxEmptyBBox[2] * maxEmptyBBox[3]
@@ -514,35 +515,50 @@
                   : maxEmptyBBox;
             }
           }
-        }
-
-        if (maxEmptyBBox[3] >= 100 - closingLimit) {
-          if (maxEmptyBBox[2] >= 100 - clearSideLimit) {
-            returnMessage = alertMessage[2];
+          // important codes that return alert messages to command the car movements
+          if (maxEmptyBBox[3] >= 100 - closingLimit) {
+            // in the case the height of the empty space bbox is large
+            if (maxEmptyBBox[2] >= 100 - clearSideLimit) {
+              // in case the width is large enough
+              returnMessage = alertMessage[2]; // accelerate
+            } else {
+              if (maxEmptyBBox[2] >= ableToMoveWidth)
+                // if the width of the empty space is large enough
+                returnMessage =
+                  maxEmptyBBox[0] >= 50 ? alertMessage[4] : alertMessage[3];
+              // Veer Right if the empty space is on the right
+              // Veer Left if the empty space is on the left
+            }
+          } else if (
+            maxEmptyBBox[3] < 100 - closingLimit &&
+            maxEmptyBBox[3] >= 100 - stopLimit
+          ) {
+            // if the empty space is close enough so that the car need to decelerate but far enough
+            // so that it doesn't need to stop
+            if (maxEmptyBBox[2] >= 100 - clearSideLimit) {
+              // if the width of the empty space is wide enough
+              returnMessage = alertMessage[1]; // just decelerate
+            } else {
+              if (maxEmptyBBox[2] >= ableToMoveWidth)
+                returnMessage =
+                  maxEmptyBBox[0] >= 50 ? alertMessage[6] : alertMessage[5];
+              // Decelerate and Veer Right if the empty space is on the right
+              // Decelerate and Veer Left if the empty space is on the left
+            }
           } else {
-            if (maxEmptyBBox[2] >= ableToMoveWidth)
+            // if the height of the empty space is too small
+            if (maxEmptyBBox[2] >= ableToMoveWidth) {
+              //if the width of the empty space is large enough
               returnMessage =
-                maxEmptyBBox[0] >= 50 ? alertMessage[4] : alertMessage[3];
-          }
-        } else if (
-          maxEmptyBBox[3] < 100 - closingLimit &&
-          maxEmptyBBox[3] >= 100 - stopLimit
-        ) {
-          if (maxEmptyBBox[2] >= 100 - clearSideLimit) {
-            returnMessage = alertMessage[1];
-          } else {
-            if (maxEmptyBBox[2] >= ableToMoveWidth)
-              returnMessage =
-                maxEmptyBBox[0] >= 50 ? alertMessage[6] : alertMessage[5];
-          }
-        } else {
-          if (maxEmptyBBox[2] >= ableToMoveWidth) {
-            returnMessage =
-              maxEmptyBBox[0] >= 50 ? alertMessage[7] : alertMessage[8];
-          } else {
-            conStopNum++;
-            if (conStopNum > 3) {
-              returnMessage = alertMessage[9];
+                maxEmptyBBox[0] >= 50 ? alertMessage[7] : alertMessage[8];
+              // Reverse Left if the empty space is on the right
+              // Reverese Right if the empty space is on the left
+            } else {
+              // not receiving
+              conStopNum++;
+              if (conStopNum > 3) {
+                returnMessage = alertMessage[9];
+              }
             }
           }
         }
